[package]
name = "caelis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
ariadne = { version = "0.5.1", features = ["auto-color"] }
chumsky = { version = "0.10.1", features = ["memoization", "pratt"] }
clap = { version = "4.5.39", features = ["derive"] }
inkwell = { version = "0.6.0", features = ["llvm18-1-prefer-dynamic"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
